feat: interview ratings in applications table (#163)
* feat: interview ratings in applications table

* format

* backend ci

* backend ci
